--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,15 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+button {
+  cursor: pointer;
+  transition: 300ms ease-in-out all;
+  opacity: 1;
+}
+button:hover {
+  opacity: 0.6;
+}
+
 .widget-container {
   max-width: 350px;
   min-width: 320px;
